// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders the UI as expected 1`] = `
<div
  className="App"
>
  <main
    className="main"
  >
    <h1>
      MyMetcon Workout Creator
    </h1>
  </main>
</div>
`;

exports[`Landing Page component renders the UI as expected 1`] = `
<div
  className="App"
>
  <main
    className="main"
  >
    <h1>
      Workout Creator
    </h1>
    <p>
      Create your own metabolic-conditoning workout
    </p>
    <p>
      Choose how long you want to workout for and the muscle groups you want to work, and we'll do the rest!
    </p>
    <button
      className="big-btn"
    >
       
      <a
        href="/sign-up"
        onClick={[Function]}
      >
         Sign Up 
      </a>
    </button>
    <button
      className="big-btn"
    >
       
      <a
        href="/login"
        onClick={[Function]}
      >
         Login
      </a>
       
    </button>
    <p>
      To login: 
    </p>
    <p>
      email: testuser@gmail.com
    </p>
    <p>
      password: Testpassword1
    </p>
  </main>
</div>
`;

exports[`Login component renders the UI as expected 1`] = `
<div
  className="App"
>
  <main>
    <h1>
      Log In
    </h1>
    <form
      className="login-form"
      onSubmit={[Function]}
    >
      <label
        className="user-label"
        htmlFor="email"
      >
        Email
      </label>
      <input
        id="email"
        name="loginEmail"
        onChange={[Function]}
        placeholder="Email"
        required={true}
        type="text"
      />
      <label
        className="user-label"
        htmlFor="password"
      >
        Password
      </label>
      <input
        id="password"
        name="loginPassword"
        onChange={[Function]}
        placeholder="Password"
        required={true}
        type="password"
      />
      <button
        className="small-btn"
        type="submit"
      >
         Log In 
      </button>
    </form>
    <div>
      <h2>
        Don't have an account yet?
      </h2>
      <a
        href="/sign-up"
        onClick={[Function]}
      >
        <button
          className="small-btn"
        >
          Sign Up
        </button>
      </a>
    </div>
  </main>
</div>
`;

exports[`Navbar component renders the UI as expected 1`] = `
<div
  className="navbar"
>
  <nav
    className="nav"
    role="navigation"
  >
    
  </nav>
</div>
`;

exports[`New Workout component renders the UI as expected 1`] = `
<div
  className="App"
>
  <div
    className="row"
  >
    <div
      className="col-sm-12"
    >
      <form
        onSubmit={[Function]}
      >
        <h2
          className="workout-question-1"
        >
          Which muscle groups would you like to work?
        </h2>
        <div
          className="checkbox"
        >
          <div
            className="App"
          >
            <div
              className="row"
            >
              <label
                className=""
              >
                <input
                  checked={false}
                  className="form-check-input"
                  name="Arms"
                  onChange={[Function]}
                  type="checkbox"
                />
                Arms
              </label>
            </div>
          </div>
          <div
            className="App"
          >
            <div
              className="row"
            >
              <label
                className=""
              >
                <input
                  checked={false}
                  className="form-check-input"
                  name="Legs"
                  onChange={[Function]}
                  type="checkbox"
                />
                Legs
              </label>
            </div>
          </div>
          <div
            className="App"
          >
            <div
              className="row"
            >
              <label
                className=""
              >
                <input
                  checked={false}
                  className="form-check-input"
                  name="Chest"
                  onChange={[Function]}
                  type="checkbox"
                />
                Chest
              </label>
            </div>
          </div>
          <div
            className="App"
          >
            <div
              className="row"
            >
              <label
                className=""
              >
                <input
                  checked={false}
                  className="form-check-input"
                  name="Back"
                  onChange={[Function]}
                  type="checkbox"
                />
                Back
              </label>
            </div>
          </div>
          <div
            className="App"
          >
            <div
              className="row"
            >
              <label
                className=""
              >
                <input
                  checked={false}
                  className="form-check-input"
                  name="Core"
                  onChange={[Function]}
                  type="checkbox"
                />
                Core
              </label>
            </div>
          </div>
          <div
            className="App"
          >
            <div
              className="row"
            >
              <label
                className=""
              >
                <input
                  checked={false}
                  className="form-check-input"
                  name="Cardio"
                  onChange={[Function]}
                  type="checkbox"
                />
                Cardio
              </label>
            </div>
          </div>
          <div
            className="App"
          >
            <div
              className="row"
            >
              <label
                className=""
              >
                <input
                  checked={false}
                  className="form-check-input"
                  name="Advanced"
                  onChange={[Function]}
                  type="checkbox"
                />
                Advanced
              </label>
            </div>
          </div>
        </div>
        <h2
          className="workout-question-2"
        >
          How long do you want to workout for?
        </h2>
        <div
          className="workout-time answer-2"
        >
          <input
            id="time-1"
            name="workoutTimeValue"
            onClick={[Function]}
            type="radio"
            value="5"
          />
          <label
            htmlFor="time-1"
          >
            5 minutes
          </label>
          <input
            id="time-2"
            name="workoutTimeValue"
            type="radio"
            value="10"
          />
          <label
            htmlFor="time-2"
          >
            10 minutes
          </label>
          <input
            id="time-3"
            name="workoutTimeValue"
            type="radio"
            value="15"
          />
          <label
            htmlFor="time-3"
          >
            15 minutes
          </label>
          <input
            id="time-4"
            name="workoutTimeValue"
            type="radio"
            value="20"
          />
          <label
            htmlFor="time-4"
          >
            20 minutes
          </label>
          <input
            id="time-5"
            name="workoutTimeValue"
            type="radio"
            value="25"
          />
          <label
            htmlFor="time-5"
          >
            25 minutes
          </label>
          <input
            id="time-6"
            name="workoutTimeValue"
            type="radio"
            value="30"
          />
          <label
            htmlFor="time-6"
          >
            30 minutes
          </label>
        </div>
        <h2
          className="workout-question-3"
        >
          What style of workout would you like?
        </h2>
        <div
          className="workout-type answer-3"
        >
          <input
            id="emom"
            name="workoutTypeValue"
            onClick={[Function]}
            type="radio"
            value="EMOM"
          />
          <label
            htmlFor="emom"
          >
            EMOM (Every Minute On the Minute)
          </label>
          <input
            id="amrap"
            name="workoutTypeValue"
            type="radio"
            value="AMRAP"
          />
          <label
            htmlFor="amrap"
          >
            AMRAP (As Many Rounds As Possible)
          </label>
        </div>
        <br />
        <h2>
          Name Your Workout:
        </h2>
        <div
          className="workouts-name"
        >
          <input
            id="workouts-name-input"
            name="workoutNameValue"
            onChange={[Function]}
            placeholder="Example: Workout 1"
            type="text"
          />
        </div>
        <br />
        <button
          className="big-btn"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Not Found component renders the UI as expected 1`] = `
<div>
  <h1>
    Page Not Found!
  </h1>
</div>
`;

exports[`Past Workouts componenet renders the UI as expected 1`] = `
<div
  className="App"
>
  <main
    className="main"
  >
    <h1>
      Past Workouts
    </h1>
    <table
      className="workouts-table"
    >
      <thead>
        <tr>
          <th
            className="tb-name"
          >
            Name
          </th>
          <th
            className="tb-id"
          >
            Workout ID
          </th>
          <th
            className="tb-view"
          >
            View Workout
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Test workout
          </td>
          <td>
             
            1
             
          </td>
          <td>
            <button>
              <a
                href="/past-workouts/1"
                onClick={[Function]}
              >
                View
              </a>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Test workout 2
          </td>
          <td>
             
            2
             
          </td>
          <td>
            <button>
              <a
                href="/past-workouts/2"
                onClick={[Function]}
              >
                View
              </a>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <a
      href="/create-workout"
      onClick={[Function]}
    >
      <button>
        Create Workout
      </button>
    </a>
  </main>
</div>
`;

exports[`Personal Home Page component renders the UI as expected 1`] = `
<div
  className="App"
>
  <main>
    <h1>
      Home
    </h1>
    <div
      className="workout-btn"
    >
      <button
        className="big-btn"
      >
        <a
          href="/past-workouts"
          onClick={[Function]}
        >
          Past Workouts
        </a>
      </button>
      <button
        className="big-btn"
      >
        <a
          href="/create-workout"
          onClick={[Function]}
        >
          New Workout
        </a>
      </button>
    </div>
  </main>
</div>
`;

exports[`Sign Up component renders the UI as expected 1`] = `
<div
  className="App"
>
  <main>
    <h1>
      Sign Up
    </h1>
    <form
      className="sign-up-form"
      onSubmit={[Function]}
    >
      <div
        className="sign-up-email"
      >
        <label
          className="user-label"
          htmlFor="email"
        >
          Email
        </label>
        <input
          id="email"
          name="signUpEmail"
          onChange={[Function]}
          placeholder="Email"
          required={true}
          type="text"
        />
      </div>
      <div
        className="sign-up-password"
      >
        <label
          className="user-label"
          htmlFor="password"
        >
          Password (one capital letter and one number needed)
        </label>
        <input
          id="password"
          name="signUpPassword"
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
        />
      </div>
      <div
        className="sign-up-name"
      >
        <label
          className="user-label"
          htmlFor="fname"
        >
          First Name
        </label>
        <input
          id="fname"
          name="signUpFirstName"
          onChange={[Function]}
          placeholder="First Name"
          required={true}
          type="text"
        />
      </div>
      <button
        className="small-btn"
        type="submit"
      >
        Sign Up!
      </button>
    </form>
    <div>
      <h2>
        Already have an account?
      </h2>
      <button
        className="small-btn"
      >
        <a
          href="/login"
          onClick={[Function]}
        >
          Login
        </a>
      </button>
    </div>
  </main>
</div>
`;

exports[`View Past Workouts componenet renders the UI as expected 1`] = `
<div
  className="App"
>
  <main
    className="main"
  >
    <a
      className="NavCircleButton "
    >
      Go Back
    </a>
  </main>
</div>
`;
